--- a/client-app/package.json
+++ b/client-app/package.json
@@ -12,6 +12,8 @@
     "@types/react-dom": "^16.9.8",
     "@types/uuid": "^8.0.1",
     "axios": "^0.19.2",
+    "mobx": "^5.15.5",
+    "mobx-react": "^6.2.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
