--- a/client-app/package.json
+++ b/client-app/package.json
@@ -10,12 +10,14 @@
     "@types/node": "^12.12.54",
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
     "@types/uuid": "^8.0.1",
     "axios": "^0.19.2",
     "mobx": "^5.15.5",
     "mobx-react": "^6.2.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "semantic-ui-react": "^1.1.1",
     "typescript": "^3.7.5",
